examples/sample-product-chart/chart-test/reports/run-full-bench-20260609-085346/scenario-gateway-api-istio-gateway-api-backend-tls-policy-20260609-093723/artifacts/manifests/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: sample
      meta.helm.sh/release-namespace: sample
    creationTimestamp: "2026-06-09T13:37:59Z"
    labels:
      app.kubernetes.io/managed-by: Helm
    name: sample
    namespace: sample
    resourceVersion: "669"
    uid: 28314ca2-0154-4427-b4bd-fd11c6361367
  spec:
    clusterIP: 10.96.12.79
    clusterIPs:
    - 10.96.12.79
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: sample
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2026-06-09T13:38:03Z"
    labels:
      gateway.istio.io/managed: istio.io-gateway-controller
      gateway.networking.k8s.io/gateway-name: sample-gw
    name: sample-gw-istio
    namespace: sample
    ownerReferences:
    - apiVersion: gateway.networking.k8s.io/v1beta1
      kind: Gateway
      name: sample-gw
      uid: af8c9c57-9e78-49b3-b3bd-98ffcca16118
    resourceVersion: "775"
    uid: e69d314f-82b4-4654-9267-7fc50b016695
  spec:
    allocateLoadBalancerNodePorts: true
    clusterIP: 10.96.250.32
    clusterIPs:
    - 10.96.250.32
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: PreferDualStack
    ports:
    - appProtocol: tcp
      name: status-port
      nodePort: 32720
      port: 15021
      protocol: TCP
      targetPort: 15021
    - appProtocol: http
      name: http
      nodePort: 31992
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      gateway.networking.k8s.io/gateway-name: sample-gw
    sessionAffinity: None
    type: LoadBalancer
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
